project/logs/20250514_154404.log
Use Adapter:NVIDIA GeForce RTX 4060 Laptop GPU

FeatureLevel : 12.2

Complete create D3D12Device!!!

Begin CompileShader, path:Object3D.VS.hlsl,profile:vs_6_0

Object3D.VS.hlsl:11:1: error: unknown type name 'VertexShaderOutput'; did you mean 'VertexShaderoutput'?
VertexShaderOutput main(VertexShaderInput input)
^~~~~~~~~~~~~~~~~~
VertexShaderoutput
Object3D.VS.hlsl:1:8: note: 'VertexShaderoutput' declared here
struct VertexShaderoutput
       ^
Object3D.VS.hlsl:13:5: error: unknown type name 'VertexShaderOutput'; did you mean 'VertexShaderoutput'?
    VertexShaderOutput output;
    ^~~~~~~~~~~~~~~~~~
    VertexShaderoutput
Object3D.VS.hlsl:1:8: note: 'VertexShaderoutput' declared here
struct VertexShaderoutput
       ^

